--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "netlify-cli": "^2.71.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-native-webview": "^11.0.2",
+    "react-native-youtube": "^2.0.1",
+    "react-player": "^2.7.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
