--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "install": "^0.13.0",
+    "material-ui": "^0.20.2",
     "netlify-cli": "^2.71.0",
+    "npm": "^6.14.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native-webview": "^11.0.2",
